--- a/import-service/package.json
+++ b/import-service/package.json
@@ -17,7 +17,9 @@
     "webpack": "^5.44.0"
   },
   "dependencies": {
+    "ajv": "^8.6.2",
     "aws-sdk": "^2.955.0",
-    "csv-parser": "^3.0.0"
+    "csv-parser": "^3.0.0",
+    "pg": "^8.7.1"
   }
 }
